kubernetes/argocd_cluster02/config/boutique-app/frontend/frontend-vs.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: boutique-gateway
  namespace: boutique
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - boutique.dublinconsulting.com.br
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - boutique.dublinconsulting.com.br
      tls:
        mode: SIMPLE
        credentialName: tls-boutique
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend
  namespace: boutique
spec:
  hosts:
    - boutique.dublinconsulting.com.br
  gateways:
    - boutique-gateway
  http:
    - route:
        - destination:
            host: frontend-active.boutique.svc.cluster.local
            port:
              number: 80
